[tool.poetry]
name = "hps-1"
version = "0.1.0"
description = ""
authors = ["shumer"]
readme = "README.md"
packages = [{include = "hps"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
